--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   permission_handler: ^11.4.0
   file_picker: ^10.0.0
 
+  loomeive:
+    git:
+      url: git@github.com:eivehub/loomeive.git
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
