--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   loomeive:
     git:
       url: git@github.com:eivehub/loomeive.git
+  simple_gradient_text: ^1.3.0
 
 dev_dependencies:
   flutter_test:
