--- a/macos/Runner/GoogleService-Info.plist
+++ b/macos/Runner/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>597983428967-ct4atfuttg6vd2l489pd7deu93nmt7ml.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.597983428967-ct4atfuttg6vd2l489pd7deu93nmt7ml</string>
 	<key>API_KEY</key>
 	<string>AIzaSyC6Vc33pHSxntoaZS1fOn4NlPo0E8RtnaI</string>
 	<key>GCM_SENDER_ID</key>
