--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
     git:
       url: git@github.com:eivehub/loomeive.git
   simple_gradient_text: ^1.3.0
+  firebase_auth: ^5.5.3
 
 dev_dependencies:
   flutter_test:
