--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
       url: git@github.com:eivehub/loomeive.git
   simple_gradient_text: ^1.3.0
   firebase_auth: ^5.5.3
+  google_sign_in: ^6.3.0
+  sign_button: ^2.0.6
 
 dev_dependencies:
   flutter_test:
