--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_auth: ^5.5.3
   google_sign_in: ^6.3.0
   sign_button: ^2.0.6
+  flutter_email_sender: ^7.0.0
+  gradient_icon: ^2.0.9
 
 dev_dependencies:
   flutter_test:
