added uid + duration picker

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   sign_button: ^2.0.6
   flutter_email_sender: ^7.0.0
   gradient_icon: ^2.0.9
+  duration_picker: ^1.2.0
 
 dev_dependencies:
   flutter_test:
