--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_email_sender: ^7.0.0
   gradient_icon: ^2.0.9
   duration_picker: ^1.2.0
+  collection: ^1.19.1
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
