--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,11 @@ dependencies:
     sdk: flutter
   excel: ^4.0.6
   grouped_list: ^6.0.0
-  intl: ^0.19.0
+  # intl: ^0.20.2
   bloc: ^9.0.0
   flutter_bloc: ^9.1.0
   form_builder_validators: ^11.1.2
-  flutter_form_builder: ^9.7.0
+  # flutter_form_builder: ^9.7.0
   equatable: ^2.0.7
   gap: ^3.0.1
   loading_animation_widget: ^1.3.0
@@ -45,6 +45,8 @@ dependencies:
   duration_picker: ^1.2.0
   collection: ^1.19.1
   uuid: ^4.5.1
+  flutter_form_builder: ^10.0.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
