--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   gap: ^3.0.1
   loading_animation_widget: ^1.3.0
   custom_refresh_indicator: ^4.0.1
-  flutter_slidable: ^4.0.0
+  flutter_slidable: ^4.0.3
   firebase_core: ^3.12.1
   firebase_database: ^11.3.4
   json_serializable: ^6.9.4
@@ -47,6 +47,7 @@ dependencies:
   uuid: ^4.5.1
   flutter_form_builder: ^10.0.1
   intl: ^0.20.2
+  country_flags: ^4.1.0
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +60,7 @@ flutter:
   assets:
     - assets/
     - assets/template.xlsx
+    - assets/translations/
 
   fonts:
     - family: Lexend
